force-app/main/default/objects/Error_Log__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be a user lookup who generated the error.</description>
    <label>Current User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>