force-app/main/default/objects/Error_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>This field will be used to store the exception type of the error.</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>