force-app/main/default/objects/Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>This will be used to trace the stack of function calls, used for debugging.</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>