force-app/main/default/objects/Error_Log__c/listViews/All_Error_Logs.listView-meta.xml
<ListView>
    <fullName>All_Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Stack_Trace__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Error Logs</label>
</ListView>